--- a/ThinkBlink/app/src/main/res/values/strings.xml
+++ b/ThinkBlink/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="floating_widget_label">Floating Widget Label</string>
     <string name="floating_widget_details">Floating Widget Details</string>
     <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>
+    <string name="screen_flicker">Screen Flicker</string>
 </resources>
